Color for "constants".

--- a/article.css
+++ b/article.css
@@ -74,6 +74,10 @@ span.lab {
 	font-style: italic;
 }
 
+span.constant {
+    color: maroon;
+}
+
 span.comment {
 	font-style: italic;
 	color: red;
