--- a/index.css
+++ b/index.css
@@ -4,7 +4,7 @@ body {
 }
 
 .wikiactions ul {
-    background-color: DarkSeaGreen;
+    background-color: #8FBC8F;
     color: blue;
     margin: 0;
     padding: 6px;
