--- a/mwbase/html/article.css
+++ b/mwbase/html/article.css
@@ -53,7 +53,7 @@ a.txt:hover {
 }
 
 .wikiactions ul {
-	background-color: #8FBC8F;
+	background-color: DarkSeaGreen;
 	color: blue;
 	margin: 0;
 	padding: 6px;
