--- a/mwbase/html/index.css
+++ b/mwbase/html/index.css
@@ -4,7 +4,7 @@ body {
 }
 
 .wikiactions ul {
-    background-color: #8FBC8F;
+    background-color: DarkSeaGreen;
     color: blue;
     margin: 0;
     padding: 6px;
